add confirm box

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -269,3 +269,24 @@ a.logo
     height: 32px
     border: 1px solid #CADBEA
     font-size: 12px
+
+.box_confirm
+  text-align: center
+  div
+    font-size: 18px
+    margin: 15px
+  a
+    padding: 5px 10px
+    margin: 15px
+    width: 60px
+    height: 30px
+    text-decoration: none
+    color: white
+    cursor: pointer
+    font-size: 15px
+    &:hover
+      text-decoration: none
+  .box_ok
+    background: #548ff4
+  .box_cancel
+    background: #9f9f9f
