--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -4,7 +4,7 @@
   .content_head
     - if current_user and post.editable_by? current_user
       %a.remove{ :href => post_path(post), :title => '删除',
-        :data => { :doconfirm => "确定删除?", :widget => "rest", :callback => "del", :md => "delete", :parent => "tar_post" }}<
+        :data => { :doconfirm => "确定删除该条帖子吗?", :widget => "rest", :callback => "del", :md => "delete", :parent => "tar_post" }}<
         删除
       = link_to "编辑", edit_post_path(post), :class => 'edit', :title => '编辑'
     %a.open{ :href => posts_blog_path(post), :target => "_blank",
