--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -2682,3 +2682,220 @@ margin-bottom:30px;
 	margin-left:5px;
 	vertical-align:middle;
 }
+/*********************************div_del*********************************/
+.del{
+	width:320px;
+	height:140px;
+	border:1px solid #548ff4;
+	border-radius:15px;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	color:#000000;
+	font-size:14px;
+	line-height:14px;
+}
+
+
+
+/**********************reply_page*********************************/
+.site .reply{
+	height:110px;
+	position:relative;
+	padding:0;
+	color:#ffffff;
+	
+
+
+}
+.reply .reply_header{
+	width:900px;
+	height:45px;
+	background-color:#548ff4;
+	border-radius:15px;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	position:absolute;
+    top:60px;
+    right:0;
+    left:0;
+	bottom:0;
+}
+
+.reply .reply_icon{
+	width:60px;
+	height:60px;
+	background:url('images/avatar.jpg') no-repeat 0 0;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	position:absolute;
+	top:20px;
+	left:20px;
+}
+
+.reply .reply_icon_s{
+	width:36px;
+	height:36px;
+	border:3px solid #548ff4;
+	border-radius:10px;
+	-moz-border_radius:10px;
+	-webkit-border-radius:10px;
+	background:url('images/avatar.jpg') no-repeat 0 0;
+	overflow:hidden;
+	position:absolute;
+	top:42px;
+	left:53px;
+	z-index:1;
+}
+
+.reply .title{
+	position:absolute;
+	top:0;
+	left:100px;
+	height:300px;
+	height:50px;
+	z-index:2;
+}
+
+
+
+.reply .title h1{
+	font-size:36px;
+	font-family:;
+	color:#000000;
+	line-height:40px;
+	float:left;
+	padding:-25px 10px 0 30px;
+	
+	
+}
+
+.reply .title h2{
+	float:left;
+	font-size:12px;
+	padding:0px 10px;
+	position:relative;
+	bottom:-35px;
+
+}
+
+.reply .nav_containers{
+	width:200px;
+	height:50px;
+    position:absolute;
+    bottom:30px;
+    right:0;
+    padding-right:30px;
+	overflow:hidd en;	
+}
+
+
+.reply .nav_icon_follow{
+	width:40px;
+	height:30px;
+	overflow:hidden;
+	position:relative;
+	right:0px;
+	top:0;
+}
+
+.reply .nav_icon_follow a{
+	width:40px;
+	height:30px;
+	background:url('images/navi_icon.gif') no-repeat 0 -40px;
+	display:block;
+
+}
+
+.reply .nav_icon_follow a:hover{
+    background:url('images/navi_icon.gif') no-repeat 0 0;
+
+
+}
+
+.reply .nav_icon_collect{
+	width:40px;
+	height:30px;
+	overflow:hidden;
+	position:relative;
+	right:-50px;
+	top:-30px;
+}
+
+.reply .nav_icon_collect a{
+	width:40px;
+	height:30px;
+	background:url('images/navi_icon.gif') no-repeat -40px -40px;
+    display:block;
+}
+.reply .nav_icon_collect a:hover{
+	background:url('images/navi_icon.gif') no-repeat -40px 0px;
+
+}
+
+.reply .nav_icon_reply{
+	width:40px;
+	height:30px;
+    overflow:hidden;
+    position:relative;
+	right:-100px;
+	top:-60px;
+
+}
+.reply .nav_icon_reply a{
+	width:40px;
+	height:30px;
+    background:url('images/navi_icon.gif') no-repeat -80px -40px;
+    display:block;
+}
+.reply .nav_icon_reply a:hover{
+    background:url('images/navi_icon.gif') no-repeat -80px 0;
+
+}
+
+	
+.reply .nav_icon_message{
+	width:40px;
+	height:30px;
+    overflow:hidden;
+    position:relative;
+	right:-150px;
+	top:-90px;
+}
+.reply .nav_icon_message a{
+	width:40px;
+	height:30px;
+	background:url('images/navi_icon.gif') no-repeat -120px -40px;
+    display:block;
+}
+.reply .nav_icon_message a:hover{
+	background:url('images/navi_icon.gif') no-repeat -120px 0;
+}
+.reply .name{
+	width:200px;
+	position:absolute;
+    bottom:5px;
+    top:85px;
+    left:30px;
+
+}
+
+.reply .message_unmber{
+	width:50px;
+	position:absolute;
+	bottom:5px;
+	right:20px;
+	
+}
+
+
+.reply .reply_unmber{
+	width:100px;
+	position:absolute;
+	bottom:5px;
+	right:20px;
+	
+	
+	
+}
+
