--- a/app/views/layouts/buzz.html.haml
+++ b/app/views/layouts/buzz.html.haml
@@ -1,5 +1,6 @@
 - @header = @footer = "common"
 - content_for :content, do
+  = render :partial => 'layouts/nav_user'
   = yield
   = render :partial => 'shared/footer'
 
@@ -7,5 +8,4 @@
   = stylesheet_link_tag 'post_display', 'dashboard', 'buzz'
 
 - content_for :site_layout, "site_middle_size"
-
 = render :file => 'layouts/application'
