--- a/public/stylesheets/messages.sass
+++ b/public/stylesheets/messages.sass
@@ -13,7 +13,7 @@
     margin-bottom: 30px
     @include clear_fix
 
-  .avatar
+  ._avatar
     width: 62px
     height: 62px
     float: left
@@ -25,10 +25,10 @@
     a
       color: #f93
 
-  .content
+  ._content
     margin: 0px 100px 10px 75px
 
-  .operation
+  ._operation
     float: right
     width: 80px
     text-align: right
