--- a/app/views/layouts/main.html.haml
+++ b/app/views/layouts/main.html.haml
@@ -1,6 +1,6 @@
 - @header = @footer = "common"
 - @site_layout ||= "site"
-- css "dashboard"
+- css "dashboard", "main"
 - content_for :content, do
   .dashboard
     = render partial: 'layouts/nav_user'
