--- a/app/views/blogs/followers.html.haml
+++ b/app/views/blogs/followers.html.haml
@@ -1,5 +1,4 @@
-- @sub_title = "关注#{@blog.title}的"
-- @nav_user_title = "关注#{@blog.title}的"
+- @sub_title = @nav_user_title = "关注#{@blog.title}的"
 - content_for :title, @sub_title
 
 .list_box.followers
