--- a/app/views/users/followings.html.haml
+++ b/app/views/users/followings.html.haml
@@ -1,15 +1,16 @@
-- content_for :title, "我关注的页面_宽岛"
+- @sub_title = @nav_user_title = "我关注的"
+- content_for :title, @sub_title
 
-.middle_box.following
+.list_box.following
   %h1
     ="我关注了#{@blogs.length}个页面"
-
-  - @blogs.each do |blog|
-    .follower{ :id => "blog_#{blog.id}" }
-      .avatar
-        %a{ :href => blog_path(blog) }
-          %img{ :src => blog.icon.url_for(:medium) }
-      .fo_name
-        %a{ :href => blog_path(blog) }
-          = blog.title
-      = follow_tag blog
+  %ul
+    - @blogs.each do |blog|
+      %li{ :id => "blog_#{blog.id}" }
+        .avatar_60
+          ._image{style: "background:url(#{blog.icon.url_for(:medium)})"}<
+            %a{ :href => blog_path(blog) }
+        ._name
+          %a{ :href => blog_path(blog) }
+            = blog.title
+        = follow_tag blog
