--- a/app/views/blogs/editors.html.haml
+++ b/app/views/blogs/editors.html.haml
@@ -1,5 +1,6 @@
 - @sub_title = @nav_user_title = "管理#{@blog.title}的成员"
 - content_for :title, @sub_title
+- @page_name = "成员管理"
 
 .list_box.members
   %h1
