--- a/app/views/layouts/main.html.haml
+++ b/app/views/layouts/main.html.haml
@@ -1,17 +1,15 @@
 - @header = @footer = "common"
 - @site_layout ||= "site"
-- css "dashboard", "main"
+- css "common", "post_display", "dashboard", "main"
 - content_for :content, do
   .dashboard
     = render partial: 'layouts/nav_user'
+    = render partial: "layouts/breadcrumbs"
     -if @blog
       = render partial: "layouts/menu"
     .main
       = yield
   = render :partial => 'shared/footer'
-
-- content_for :head, do
-  = stylesheet_link_tag "common", "post_display", "dashboard"
 
 - content_for :site_layout, @site_layout 
 - @sub_title += '_宽岛'
