--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -235,12 +235,13 @@ a.page_name
     .my_message
       height: 40px
       background: url('/images/icon.gif') -60px -40px no-repeat
-  .head_txt
-    clear: both
-    line-height: 40px
-    margin-left: 20px
-    a
-      text-decoration: none
+
+.breadcrumbs
+  clear: both
+  line-height: 40px
+  margin-left: 20px
+  a
+    text-decoration: none
 
 
 .highlight_following .menu_arrow
