--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -6,7 +6,7 @@
   height: 110px
   position: relative
   padding: 0
-  color: #ffffff
+  color: #fff
   ._header
     width: 900px
     height: 45px
@@ -41,6 +41,14 @@
     top: 42px
     left: 53px
     z-index: 1
+  ._name
+    width: 60px
+    position: absolute
+    top: 80px
+    text-align: center
+    left: 20px
+    a
+      color: #fff
   ._title
     position: absolute
     top: 0
@@ -108,12 +116,6 @@
         background: url('/images/navi_icon.gif') no-repeat -120px -40px
         &:hover
           background: url('/images/navi_icon.gif') no-repeat -120px 0
-    ._name
-      width: 200px
-      position: absolute
-      bottom: 5px
-      top: 85px
-      left: 30px
 
 .list_box
   border: 1px solid #cadbea
