--- a/app/views/layouts/_nav_user.html.haml
+++ b/app/views/layouts/_nav_user.html.haml
@@ -32,5 +32,6 @@
         - if current_user.messages.unreads.count > 0
           = current_user.messages.unreads.count
   - if @blog && !@blog.primary
-    %a._name{href: home_path(@blog)}<
-      = @blog.title
+    ._name
+      %a{href: home_path(@blog)}<
+        = @blog.title
