--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -123,10 +123,11 @@
 
 .list_box
   border: 1px solid #cadbea
-  @include border-radius(8px)
+  @include border-radius(12px)
   h1
     padding: 15px 0 5px 20px
   ul
+    margin-bottom: -1px
     li
       width: 550px
       padding: 15px 0 5px 20px
