--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -297,9 +297,11 @@
       border-right: 0
       margin: 0
       padding: 0
-      @include border-radius(12px)
+      @include border-radius(8px)
       display: inline-block
       height: 30px
+      width: 440px
+      _height: 28px
       input
         margin-left: 20px
         border: 0
@@ -308,15 +310,27 @@
         font-size: 20px
         width: 280px
         color: #808080
-   
+        float: left
+        display: inline
       .url_uploader_btn
-        @include hide_text
         display:  inline-block
         width: 130px
-        background: url('/images/post_image_url.gif') no-repeat
         cursor: pointer
         line-height: 30px
         vertical-align: top
+        height: 30px
+        background-color: #36c
+        color: #fff
+        text-align: center
+        -webkit-border-top-right-radius: 8px
+        -webkit-border-bottom-right-radius: 8px
+        -moz-border-radius-topright: 8px
+        -moz-border-radius-bottomright: 8px
+        border-top-right-radius: 8px
+        border-bottom-right-radius: 8px
+        float: right
+        display: inline
+        margin-right: -5px
 
 
 .my_pages
