--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -53,7 +53,7 @@ label
   padding-top: 10px
   font-family: "Hiragino Sans GB,hei,microsoft yahei"
   a
-    color: #36c
+    color: $blue
     padding: 5px 10px
     text-decoration: none
     span
@@ -69,13 +69,13 @@ label
   .highlight
     color: #fff
     @include border-radius(8px)
-    background-color: #36c
+    background-color: $blue
     span
       background: url('/images/icons.gif') -100px -40px
   .menu
     z-index: 9999
     background-color: #ffffff
-    border: 3px solid #3366cc
+    border: 3px solid $blue
     display: inline
     font-size: 18px
     line-height: 24px
@@ -93,7 +93,7 @@ label
       margin-top: -1px
       padding: 4px
       height: 24px
-      color: #3366cc
+      color: $blue
       span
         display: inline-block
         width: 14px
