--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -80,14 +80,13 @@ label
     font-size: 18px
     line-height: 24px
     padding: 0px 5px
-    border-radius: 8px
-    -moz-border-radius: 8px
-    -webkit-border-radius: 8px
+    @include border-radius(8px)
     overflow: hidden
     text-align: left
     position: absolute
     margin-left: -2px
     margin-top: -6px
+    _width: 120px
     div
       border-top: 1px solid #eaeaea
       margin-top: -1px
