--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -43,8 +43,13 @@
     overflow: hidden
     position: absolute
     top: 42px
-    left: 53px
+    left: 60px
     z-index: 1
+    a
+      width: 30px
+      height: 30px
+      display: block
+      text-decoration: none
   ._name
     width: 60px
     position: absolute
