--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -7,7 +7,7 @@
 body{
 	margin:0px;
 	font-size:12px;
-	font-family:Hiragino Sans GB,hei,microsoft yahei;
+	font-family:"Hiragino Sans GB,hei,microsoft yahei";
 }
 
 a{ 
@@ -856,6 +856,7 @@ form.edit_page .submit_box input{
 	border:1px solid #cadbea;
 	background:#fff;
 	margin-bottom:30px;
+	position:relative;
 }
 
 .post .text{
@@ -864,13 +865,19 @@ form.edit_page .submit_box input{
 
 
 .post .url_image span{
+	color:#ffffff;
 	display: inline-block;
 	width:130px;
-	background:url('images/post_image_url.gif') no-repeat;
+	background-color:#3366cc;
+	text-align:center;
+	height:30px;
+	-moz-border-radius-topright:10px;
+	-moz-border-radius-bottomright:10px;
 	cursor:pointer;
 	line-height:30px;
-	margin-top:9px;
-	vertical-align:top;
+    position:absolute;
+	top:10px;
+	right:130px;
 }
 .post .url_image input{
 	border:0;
@@ -1127,8 +1134,13 @@ form.edit_page .submit_box input{
 	width:900px;
 	height:130px;
 	overflow:hidden;
+	position:relative;
+	padding:0;
 
 }
+
+
+
 
 .dashboard .head_avatar{
 	width:60px;
@@ -2358,6 +2370,7 @@ div.new_reply .content_footer .right a.reply:hover
 	width:150px;
 	height:44px;
 	background:url('images/post_send.gif');
+	
 	cursor:pointer;
 	text-indent: -1000px;
 	overflow:hidden;
@@ -2911,8 +2924,77 @@ margin-bottom:30px;
 	position:absolute;
 	bottom:5px;
 	right:20px;
-	
-	
+}
+
+.site .backhome{
+	width:80px;
+	height:20px;
+	background:url('images/btn_backhome.gif') no-repeat;
 	
 }
+
+
+
+
+/***********************************dashboard_2011/3/22************************************************/
+
+.dashboard .head{
+	background: url('images/dash_.gif') no-repeat;
+	width:900px;
+	height:150px;
+	overflow:hidden;
+	position:relative;
+	padding:0;
+
+}
+
+
+
+.dashboard .sub_head_avatar{
+	width:30px;
+	height:30px;
+ 	background:url('images/test002.jpg') no-repeat;
+    position:absolute;
+    top:48px;
+    left:55px;
+    z-index:1;
+    border:3px solid #548ff4;
+    border-bottom:none;
+    border-top-right-radius:10px;
+    border-top-left-radius:10px;
+    -moz-border-radius-topright:10px;
+    -moz-border-radius-topleft:10px;
+    -webkit-border-top-right-radius:10px;
+    -webkit-border-top-left-radius:10px;
+}
+
+.dashboard .sub_intro{
+	width:680px;
+	height:40px;
+	background-color:#444444;
+	color:#808080;
+	font-size:14px;
+	font-family:"Hiragino Sans GB,hei,microsoft yahei";
+	line-height:40px;
+	text-align:center;
+	position:absolute;
+	top:100px;
+	left:20px;
+	border-bottom-right-radius:10px;
+	border-bottom-left-radius:10px;
+	-moz-border-radius-bottomright:10px;
+	-moz-border-radius-bottomleft:10px;
+	webkit-border-bottom-right-radius:10px;
+	webkit-border-bottom-right-radius:10px;
+}
+
+.dashboard .sub_intro .cancel{
+	width:14px;
+	height:14px;
+	background:url('images/icons.gif') no-repeat -100px -20px;
+	position:absolute;
+	top:10px;
+	right:20px;
+}
+
 
