30*30 blog icon on dashboard

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -150,6 +150,7 @@ a.page_name
     width: 900px
     height: 130px
     overflow:hidden
+    position: relative
 
   .head_avatar
     @include size(60px, 60px)
@@ -168,16 +169,13 @@ a.page_name
     height: 30px
     border: 3px solid #548ff4
     -webkit-border-top-left-radius: 5px
-    -webkit-border-top-right-radius: 5px
     -moz-border-radius-topleft: 5px
-    -moz-border-radius-topright: 5px
     border-top-left-radius: 5px
-    border-top-right-radius: 5px
     background: url('/images/default_icon_30.jpg') no-repeat 0 0
     overflow: hidden
     position: absolute
-    top: 42px
-    left: 53px
+    top: 47px
+    left: 60px
     z-index: 1
 
   .post_area
