--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -179,3 +179,27 @@
     line-height: 70px
   .upgrade, .kick, .exit
     text-decoration: underline
+
+.messages
+  .avatar_name
+    font-weight: bold
+    a
+      color: #f93
+
+  ._content
+    margin: 0px 100px 10px 75px
+
+  ._operation
+    color: #68879F
+    float: right
+    width: 80px
+    text-align: right
+    padding-right: 18px
+    font-size: 14px
+
+    a
+      color: #68879F
+      text-decoration: underline
+
+  .new
+    font-weight: bold
