--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -368,3 +368,32 @@ a.page_name
   .content_body
     padding: 0px 50px
     font-size: 14px
+
+.dashboard_flash
+  width: 680px
+  height: 40px
+  background-color: #b8e3b7
+  color: #808080
+  font-size: 14px
+  font-family: "Hiragino Sans GB,hei,microsoft yahei"
+  line-height: 40px
+  text-align: center
+  position: absolute
+  top: 100px
+  left: 20px
+  border-bottom-right-radius: 10px
+  border-bottom-left-radius: 10px
+  -moz-border-radius-bottomright: 10px
+  -moz-border-radius-bottomleft: 10px
+  webkit-border-bottom-right-radius: 10px
+  webkit-border-bottom-right-radius: 10px
+  a
+    @include hide_text
+    width: 14px
+    height: 14px
+    display: block
+    background: url('/images/icons.gif') no-repeat -100px -20px
+    position: absolute
+    top: 10px
+    right: 20px
+    cursor: pointer
