--- a/app/views/layouts/main.html.haml
+++ b/app/views/layouts/main.html.haml
@@ -4,7 +4,7 @@
 - @nav_user_title
 - @page_name # for breadcrumbs
 - @exclude_primary # some options can't be shown in primary blog
-- css "common", "post_display", "dashboard", "main"
+- css "post_display", "dashboard", "main"
 - content_for :content, do
   .dashboard
     = render partial: 'layouts/nav_user'
