--- a/app/views/users/buzz.html.haml
+++ b/app/views/users/buzz.html.haml
@@ -8,6 +8,9 @@
       全部标识为已读
   
 .timeline{ :data => { :widget => "sugar" } }
+  - if @buzz_list.blank?
+    %h1
+      你还没回复过?!
   - @buzz_list.each do |b|
     - if p = b.post
       = render partial: "posts/post_full", object: p, as: :post,
