--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -51,7 +51,6 @@ label
   font-size: 18px
   line-height: 24px
   padding-top: 10px
-  font-family: "Hiragino Sans GB,hei,microsoft yahei"
   a
     color: $blue
     padding: 5px 10px
@@ -85,7 +84,7 @@ label
     text-align: left
     position: absolute
     margin-left: -2px
-    margin-top: -6px
+    margin-top: -7px
     _width: 120px
     div
       border-top: 1px solid #eaeaea
@@ -180,7 +179,6 @@ a.logo
     padding: 3px 6px
     border-bottom-left-radius: 6px 6px
     border-bottom-right-radius: 6px 6px
-
 
 .page_control
   float: right
@@ -307,3 +305,7 @@ a.logo
       text-decoration: none
   ._name
     word-wrap: break-word        
+
+.latest h1
+  margin: 30px 0px
+  color: #009fff
