--- a/app/views/layouts/_header_common.html.haml
+++ b/app/views/layouts/_header_common.html.haml
@@ -4,7 +4,7 @@
     %a.now_dashboard{href: fucking_root}<
       我的主页      
     &nbsp;
-    .menu{href: "#"}
+    .menu
       %div<
         探索
         %span<
