--- a/app/views/messages/_join_oper.html.haml
+++ b/app/views/messages/_join_oper.html.haml
@@ -5,7 +5,7 @@
 - else
   %div
     %a{href: messages_doing_path(message), data: { widget: "rest", md: "put",
-      callback: "replace", parent: "_operation" }} 通过
+      callback: "replace", parent: "z_operation" }} 通过
   %div
     %a{href: messages_ignore_path(message), data: { widget: "rest", md: "put",
-      callback: "replace", parent: "_operation" }} 忽略
+      callback: "replace", parent: "z_operation" }} 忽略
