--- a/app/views/blogs/followers.html.haml
+++ b/app/views/blogs/followers.html.haml
@@ -10,10 +10,10 @@
       - blog = user.primary_blog
       %li{ :id => "blog_#{blog.id}" }
         .avatar_60
-          ._image{style: "background:url(#{blog.icon.url_for(:medium)})"}<
+          .z_image{style: "background:url(#{blog.icon.url_for(:medium)})"}<
             %a{ :href => blog_path(blog) }<
               &nbsp;
-        ._name<
+        .z_name<
           %a{ :href => blog_path(blog) }<
             = user.name
         - unless followed.include?(blog)
