--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -288,11 +288,10 @@ a.logo
   .box_cancel
     background: #9f9f9f
 
-
 .avatar_60
   width: 62px
   float: left
-  ._image
+  .z_image
     @include size(60px, 60px)
     display: block
     -moz-border-radius: 6px
@@ -303,7 +302,7 @@ a.logo
       @include size(60px, 60px)
       display: block
       text-decoration: none
-  ._name
+  .z_name
     word-wrap: break-word        
 
 .latest h1
