nav_user icon bug in ie6

--- a/public/stylesheets/main.sass
+++ b/public/stylesheets/main.sass
@@ -82,11 +82,10 @@
     position: absolute
     bottom: 30px
     right: 0
-    padding-right: 30px
     div
       width: 40px
       height: 30px
-      position: relative
+      float: left
       right: 0px
       top: 0
       text-align: center
