--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -51,6 +51,7 @@ label
   font-size: 18px
   line-height: 24px
   padding-top: 10px
+  padding-right: 3px
   a
     color: $blue
     padding: 5px 10px
