Don't throw error on load_comments misuse

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -106,7 +106,7 @@
 <li>comments_count 帖子回复数量</li>
 <li>favor_count 帖子被喜欢的次数</li>
 <li>repost_count 转贴数量</li>
-<li>load_comments 加载回复代码</li>
+<li>load_comments 加载回复代码 仅帖子详情页有效</li>
 </ul>
 
 
